# myexercise

./: README.md  clean.bat  说明.txt
ARXTest/: clean.bat
CppTest/: ArrayTest.cpp  ArrayTest.cpp.orig  ContinousTest.cpp  ContinousTest.cpp.orig  CopyConstructTest.cpp  CopyConstructTest.cpp.orig  DoubleTest.cpp  DoubleTest.cpp.orig  IomanipTest.cpp  IomanipTest.cpp.orig  LogicTest.cpp  LogicTest.cpp.orig  MapTest.cpp  MapTest.cpp.orig  PathTest.cpp  PathTest.cpp.orig  PointerTest.cpp  PointerTest.cpp.orig  PolyTest.cpp  PolyTest.cpp.orig  ReadGraphvizInstallPath.cpp  ReadGraphvizInstallPath.cpp.orig  SetTest.cpp  SetTest.cpp.orig  SplitString.cpp  SplitString.cpp.orig  StrcatTest.cpp  StrcatTest.cpp.orig  StringStreamTest.cpp  StringStreamTest.cpp.orig  VectorTst.cpp  VectorTst.cpp.orig  aaa.cpp  st.cpp  (+8 more)
CppTest/RttiTest/FlexCppReflection/: AnyCast.hpp  AnyParamCast.hpp  AnyParams.cpp  AnyParams.cpp.orig  AnyParams.hpp  AnyPtr.cpp  AnyPtr.cpp.orig  AnyPtr.hpp  CreateTypeInfo.hpp  DynamicType.cpp  DynamicType.cpp.orig  DynamicType.hpp  ExposeMemberVariables.hpp  FlexCppReflection.vcproj  ForEachType.hpp  FunctionWrapperImpl.hpp  FwdAnyCast.hpp  Makefile.am  Makefile.in  MemberFunction.cpp  MemberFunction.cpp.orig  MemberFunction.hpp  MemberFunctions.cpp  MemberFunctions.cpp.orig  MemberFunctions.hpp  MemberVariable.hpp  MemberVariables.cpp  MemberVariables.cpp.orig  MemberVariables.hpp  PlainType.hpp  TestHelpers.h  TypeId.hpp  TypeInfo.cpp  TypeInfo.cpp.orig  TypeInfo.hpp  TypeInfoHelpers.cpp  TypeInfoHelpers.hpp  TypeManager.cpp  TypeManager.cpp.orig  TypeManager.hpp  (+19 more)
(+3775 files in other folders)
