INCLUDES = 
METASOURCES = AUTO
bin_PROGRAMS = FlexTest
FlexTest_SOURCES = DynamicType.cpp TypeFactory.cpp TypeFactoryHelpers.cpp \
	TypeInfo.cpp TypeInfoHelpers.cpp main.cpp test1.cpp test2.cpp test3.cpp test4.cpp \
	test5.cpp
noinst_HEADERS = AnyPtr.hpp DynamicType.hpp TestHelpers.h TypeFactory.hpp \
	TypeFactoryHelpers.hpp TypeId.hpp TypeInfo.hpp TypeInfoHelpers.hpp any_cast.hpp test1.hpp \
	test2.hpp test3.hpp test4.hpp test5.hpp
